RESOLVED FIXED92349
[EFL] Regression(r123604): webintents/web-intents-obj-constructor.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=92349
Summary [EFL] Regression(r123604): webintents/web-intents-obj-constructor.html is cra...
Chris Dumez
Reported 2012-07-26 01:28:04 PDT
strdup has been replaced by eina stringsharing in: http://trac.webkit.org/changeset/123604 Unfortunately, this change causes webintents/web-intents-obj-constructor.html to crash now.
Attachments
Patch (2.13 KB, patch)
2012-07-26 01:43 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-07-26 01:32:47 PDT
Looks like DumpRenderTreeChrome::onFrameIntentNew() was not updated accordingly to use einastringshare_del() instead of free(). I'm preparing a fix now.
Chris Dumez
Comment 2 2012-07-26 01:34:26 PDT
*** Bug 92350 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 3 2012-07-26 01:43:07 PDT
Gyuyoung Kim
Comment 4 2012-07-26 01:48:31 PDT
Comment on attachment 154577 [details] Patch Looks fine. Thanks.
Kentaro Hara
Comment 5 2012-07-26 01:49:31 PDT
Comment on attachment 154577 [details] Patch Looks OK.
WebKit Review Bot
Comment 6 2012-07-26 03:08:02 PDT
Comment on attachment 154577 [details] Patch Clearing flags on attachment: 154577 Committed r123723: <http://trac.webkit.org/changeset/123723>
WebKit Review Bot
Comment 7 2012-07-26 03:08:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.