[EFL] Regression(r123604): webintents/web-intents-obj-constructor.html is crashing https://bugs.webkit.org/show_bug.cgi?id=92349

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-26
Reviewed by Kentaro Hara.

Fix crash occurring after r123604, which replaced strdup()
usage with eina_stringshare_add(). Unfortunately, the DRT
was not updated accordingly to use eina_stringshare_del()
instead of free() on the values returned by Ewk_Intent
getters and it was causing
webintents/web-intents-obj-constructor.html to crash.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::onFrameIntentNew):

Canonical link: https://commits.webkit.org/110159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123723 268f45cc-cd09-0410-ab3c-d52691b4dbfc